# routes/apiRouter.js
@@ -3,22 +3,21 @@ var router = express.Router();
 
 /* Controllers */
 var apiController = require('../controllers/api/apiController');
+var authenticate = require('../middlewares/authenticate');
 /* Controllers END */
 
+router.post('/auth/login', apiController.login);
+
 /** GET Fetch Messages  */
-router.get('/fetch-messages/:conversationID', apiController.fetchMessages);
+router.get('/fetch-messages/:conversationID', authenticate, apiController.fetchMessages);
 /**  GET Fetch Messages END  */
 
-/** GET Login Socket  */
-router.get('/login-socket/:userID', apiController.loginSocket);
-/**  GET Login Socket END  */
-
 /** GET Join Chat  */
-router.get('/join-chat/:senderID/:receiverID', apiController.joinChat);
+router.get('/join-chat/:senderID/:receiverID', authenticate, apiController.joinChat);
 /**  GET Join Chat END  */
 
 /** POST Save Message  */
-router.post('/save-message', apiController.sendMessage);
+router.post('/save-message', authenticate, apiController.sendMessage);
 /** POST Save Message END  */
 
 module.exports = router;
